overflow correction

--- a/Front End Libraries Certification/Front End Libraries Projects/Build a Markdown Preview/src/styles/styles.scss
+++ b/Front End Libraries Certification/Front End Libraries Projects/Build a Markdown Preview/src/styles/styles.scss
@@ -37,6 +37,7 @@ textarea {
   height: 100%;
   padding: 5%;
   width: 100%;
+  overflow: auto;
 }
 
 .hidden {
